Fixes media player volume button overlap
Fixes #853. Volume up and down buttons in the media player were overlapping the current volume percentage on focus. This fix keeps the large button touch area, but adjust the focus state to be smaller.

--- a/stylesheets/design-patterns/_media-player.scss
+++ b/stylesheets/design-patterns/_media-player.scss
@@ -110,7 +110,7 @@
       .mute {
         position: absolute;
         bottom: 0;
-        left: 120px;
+        right: 0;
         height: 40px;
         width: 50px;
         padding-top: 1px;
@@ -141,7 +141,6 @@
         bottom: 0;
         height: 40px;
         width: 60px;
-        padding-top: 2px;
         font-size: 24px;
         line-height: 40px;
         text-align: center;
@@ -150,6 +149,21 @@
         &:hover,
         &:focus {
           color: $light-blue;
+          background-color: transparent;
+          outline: none;
+
+          &:before {
+            background-color: $focus-colour;
+          }
+        }
+
+        &:before {
+          content: "";
+          display: inline-block;
+          position: absolute;
+          width: 50%;
+          height: 100%;
+          z-index: -1;
         }
       }
 
@@ -157,18 +171,26 @@
         text-align: left;
         padding-left: 10px;
         left: 0;
+
+        &:before {
+          left: 0;
+        }
       }
 
       .vol-up {
         text-align: right;
         padding-right: 10px;
-        left: 60px;
+        left: 65px;
+
+        &:before {
+          right: 0;
+        }
       }
 
       .vol-display {
         position: absolute;
         bottom: 0;
-        left: 20px;
+        left: 25px;
         height: 40px;
         width: 0;
         padding-left: 35px;
@@ -185,7 +207,7 @@
     .current-time {
       position: absolute;
       bottom: 0;
-      left: 50px;
+      left: 45px;
       height: 40px;
       font-size: 14px;
       line-height: 40px;
